# super-mario-bros-engine

./: .gitignore  CMakeLists.txt  README.md  glad.c
assets/shaders/: fragment.frag  vertex.vert
assets/sprites/: blocks.aseprite  mario.aseprite  scene.aseprite
includes/glad/: glad.h
src/: camera.cpp  camera.hpp  entity.cpp  entity.hpp  gameManager.cpp  gameManager.hpp  inputSystem.cpp  inputSystem.hpp  main.cpp  openGLToolkit.cpp  openGLToolkit.hpp  sprite.cpp  sprite.hpp  spriteSheet.cpp  spriteSheet.hpp  utilities.cpp  utilities.hpp
src/inputSystem/: inputSystem.cpp  inputSystem.hpp
src/physicsEngine/: physicsEngine.cpp  physicsEngine.hpp  rigidbody.hpp
src/spriteSheet/: spriteSheet.cpp  spriteSheet.hpp  spriteSheetBlocks.cpp  spriteSheetBlocks.hpp  spriteSheetMario.cpp  spriteSheetMario.hpp
